Overflow fix

--- a/about.css
+++ b/about.css
@@ -6,6 +6,8 @@
 
 html {
     scroll-behavior: smooth;
+    overflow-x: hide;
+    overflow-y: hide;
 }
 
 
